k8s/s3-proxy/devnet/deployment-public-assets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-proxy-public-assets
spec:
  replicas: 1
  template:
    metadata:
    spec:
      serviceAccountName: s3-proxy
      securityContext:
        fsGroup: 65534
      containers:
        - image: pottava/s3-proxy:2.0
          name: s3-proxy-public-assets
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
