k8s/s3-proxy/devnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-proxy-public-assets
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
